src/app/globals.css
/* ... */
.form-select-options {
  border: 2px solid var(--primary-orange);
  padding: 4px 10px;
  border-radius: 100px;
  background: transparent;
  font-size: 16px;
}

/* Home Categories */

.category-box a {
  text-decoration: none;
  color: #fff;
  font-size: 24px;
  font-weight: 500;
  width: 80px;
  height: 80px;
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 10px;
  background: red;
}

.category-box {
  background: #fefaef;
  border-radius: 14px;
  box-shadow: 0px 2px 30px rgba(0, 0, 0, 0.08);
  width: 150px;
  height: 150px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.home-categories-align {
  display: flex;
  flex-wrap: wrap;
  gap: 20px;
  justify-content: center;
}

section#home-categories {
  padding: 79px 0 70px;
}

.category-box:first-child a {
  background: #f34a36;
}

.category-box:nth-child(2) a {
  background: #fbb13c;
}

.category-box:nth-child(3) a {
  background: #1a8b33;
}

.category-box:nth-child(4) a {
  background: #4499ae;
}

.category-box:nth-child(5) a,

.category-box:nth-child(6) a {
  background: transparent;
}
* > .list__ {
    counter-increment: labelCounter;
}
.group:hover .group-hover\:block {
    display: block;
}
.category-box:nth-child(5) a svg ,

.category-box:nth-child(6) a svg {
  height: 80px;
  width: 80px;
}

.category-box:first-child a {
  background: #f34a36;
}

.category-box:nth-child(5) a svg path {
  fill: #13313b;
}

.Toastify__toast-container.Toastify__toast-container--top-right {
  z-index: 9999999;
}

section#services {
  padding-bottom: 100px;
}
.input-icon-status {
  font-size: 40px;
  position: absolute;
  right: 20px;
  top: 12px;
}

.option-field-main {
  position: relative;
}

.input-icon-status.checkmark-icon {
  display: none;
}

.input-icon-status.cross-icon {
  color: #dd0000;
}

.input-icon-status.checkmark-icon {
  color: green;
}

.explaination-btn button {
  height: 50px;
  background: #f7631b;
  padding: 0 20px;
  align-items: center;
  gap: 10px;
  font-size: 16px;
  border-radius: 6px;
  min-width: 150px;
  display: flex;
  justify-content: center;
  text-align: center;
  color: #ffffff;
  cursor: pointer;
  transition: .3s ease;
  font-weight: 500;
}

.explaination-btn {
  position: absolute;
  right: 70px;
}



@media (max-width: 1199.98px) {

}

@media (max-width: 991.98px) {

}

@media (max-width: 767.98px) {

  .audio-player .ml{
      margin-left: 0px;
  }

  .audio-player svg{
      width: 20px;
      height: 20px;
  }

  .audio-player{
      padding: 13px 14px;
      gap: 7px;
  }

  .audio-player .progress-bar-container_a .progress-bar_a::before {
      content: '';
      position: absolute;
      height: 20px;
      width: 20px;
      background: #dd0000;
      border-radius: 50%;
      transition: width 0.1s linear;
      will-change: width;
      display: block;
      z-index: 10;
      margin-right: -10px;
      transition: all .8s linear;
  }

  .audio-player .time {
      color: var(--black);
      font-family: Inter;
      font: 400 13px/1.3em Poppins, sans-serif;
      width: 26px;
  }

}

@media (max-width: 374.98px) {

  .audio-player .menu li>*.download-link, .audio-player .menu li>*.speed-options-btn{
      font: 400 18px/1.3em Poppins, sans-serif;
      padding: 20px;
  }

  .audio-player .menu {
      top: 45px;
      right: -15px;
      position: absolute;
      background: #fff;
      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
      list-style: none;
      width: calc(100vw - 32px);
      height: auto;
      z-index: 100;
      gap: 0px;
      border-radius: 25px;
      border: 2px solid #dd0000;
  }

  .audio-player .menu li>*.download-link:hover, .audio-player .menu li>*.speed-options-btn:hover {
      color: #dd0000;
      font: 600 18px / 1.3em Poppins, sans-serif;
      transition: all .3s linear;
  }
  .audio-player .speed-options{
      width: calc(100vw - 32px);
  }

  .audio-player .speed-options li {
      padding: 20px;
      cursor: pointer;
      color: var(--black);
      font: 400 18px / 1.3em Poppins, sans-serif;
      transition: all .3s linear;
  }

}


/* hahhaha */

.drag_drop p{
  flex-direction: column;
  width: fit-content;
  color: black;
  margin: 20px 0;
}


.drag_drop button{
  margin-left: 20px;
  height: 34px;
}

.drag_drop input{
  margin-left: 20px;
  height: 34px;
  padding: 8px 10px;
  border-radius: 4px;
  border: 1px solid #00001e8f;
}

.german-exercise-container{
 display: flex;
 flex-direction: column;
 margin-top: 40px;
 gap: 3px;
}

.german-exercise-container p span.block__select {
    margin: 3px 5px;
}

.main-heading {
  margin: 20px 0;
  font-size: 40px;
}


.mobile-nav-toggler {
  display: none;
}

.listening-list__progress span {
    position: absolute;
    inset: 0;
    z-index: 999;
    display: flex;
    align-items: center;
    justify-content: center;
}

.listening-list__progress {
    position: relative;
}
/* ... */

